# fr_test_task

./: .dockerignore  .gitignore  README.MD  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn_conf.py  pyproject.toml
backend/backend/: asgi.py  secrets.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: debug.py  default.py
backend/questionnaire/: admin.py  forms.py  models.py
backend/server/: asgi.py  secrets.py  tools.py  urls.py  wsgi.py
backend/server/settings/: __init__.py  default.py  production.py
backend/service/: admin.py  admin_backend.py  apps.py  models.py
db/: Dockerfile
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json
frontend/public/: styles.scss
frontend/src/: App.vue  utils.js
frontend/src/components/: Content.vue  Navbar.vue  Pagination.vue  WithLoading.vue
frontend/src/components/form/: Question.vue
frontend/src/components/form/fields/: MultiField.vue  SingleField.vue  StringField.vue  TextField.vue
frontend/src/components/login/: GetTokenForm.vue
frontend/src/components/main/: QuestionnaireCard.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  AdminView.vue  FormAdminView.vue  FormView.vue  HomeView.vue  LoginView.vue  MainView.vue  ResultsView.vue  StatisticView.vue  WelcomeView.vue
nginx/: Dockerfile  default.conf
