[tool.poetry]
name = "fr_test_task"
version = "0.1.0"
description = ""
authors = ["https://github.com/tetelevm"]

[tool.poetry.dependencies]
python = "3.11.4"
Django = "4.2.4"
psycopg2 = "2.9.7"
ipython = "*"
djangorestframework = "^3.14.0"
django-select2 = "^8.1.2"
django-json-widget = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
